# lumen-ora

.claude/: settings.json
lumen-ora/: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  INSTALL.md  LICENSE  LICENSE-WEIGHTS  README.md  SECURITY.md  install.bat  install.ps1
lumen-ora/.github/: PULL_REQUEST_TEMPLATE.md
lumen-ora/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_rfc.md
lumen-ora/.github/workflows/: release.yml  test.yml
lumen-ora/docs/: resource-analysis.md
lumen-ora/docs/architecture/: ai-orchestration.md  overview.md  seL4-policy-model.md
lumen-ora/docs/dev-setup/: genode.md  inference.md  windows.md
lumen-ora/docs/inference/: runtime-design.md  tool-schema.md
lumen-ora/prototype/: README.md  setup.ps1  setup_inference.py  start.bat  start.ps1  test_e2e.py
lumen-ora/prototype/context-shell/: README.md  requirements.txt  run.sh  shell.py
lumen-ora/prototype/inference-bridge/: .gitignore  README.md  REMOTE_ACCESS.md  bridge.py  example_plugin.py  requirements.txt  tool_schema.py
lumen-ora/prototype/inference-bridge/llama-cpp/: .gitkeep
lumen-ora/prototype/inference-bridge/static/: index.html
lumen-ora/prototype/policy-engine/: Cargo.toml  README.md
lumen-ora/prototype/policy-engine/src/: lib.rs  main.rs
